agregando estilos a listas

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+@layer base{
+    body{
+        @apply bg-slate-800 px-4 py-2 text-white p-8;
+    }
+    h1{
+        @apply mb-2 text-3xl font-bold;
+    }
+}
