--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
 
 @layer base{
     body{
@@ -10,6 +11,5 @@
 }
 
 @layer components{
-    .form-control{
-        @apply rounded-md border border-gray-500 bg-transparent px-4 py-3 text-white mb-2 rounded-md border border-gray-600 bg-transparent px-4 py-3 text-gray-400 outline-none;
+
 }
